# timus_recommender

./: .dockerignore  .gitignore  README.md  Timus_fun.ipynb  app.py  bot.py  bot_main.py  cli.py  compexities.csv  complexities_loader.py  config.py  docker-compose.yml  hist.py  loader.py  makefile  pyproject.toml  setup.cfg  storage.py  timus_loader.py
.github/workflows/: linters-and-tests.yml  release.yml
db/: __init__.py  base.py  schemas.py
docker/: Dockerfile.code
src/: cli.py  config.py  handlers.py  loader.py  storage.py
