[tool.poetry]
name = "rpg_dice_bot"
version = "0.1"
description = "rpg dice bot"
authors = ["kek-lol-cheburek"]

[tool.poetry.dependencies]
python = "^3.9"
pyTelegramBotAPI = "^3.7.7"
pydantic = "^1.8.0"
sqlalchemy = "^1.4.0"
sqlalchemy-utils = "*"
independency = "^1.0"
typer = "*"

[tool.poetry.dev-dependencies]
black = "^19.3b0"
flake8-awesome = "<1.3"
transliterate = "^1.10"
mypy = "^0.812"
sqlalchemy-stubs = "*"

[tool.black]
target-version = ['py38']
line-length = 120

[build-system]
requires = ["poetry>=1.0"]
