[tool.poetry]
name = "timus_recommender"
version = "0.1"
description = "timus recommender"
authors = ["kek-lol-cheburek"]
packages = [
    { include = 'src' }
]

[tool.poetry.scripts]
recommender = "src.cli:timus_recommender"

[tool.poetry.dependencies]
python = "^3.8.0"
pyTelegramBotAPI = "^3.7.7"
pydantic = "*"
sqlalchemy = "^1.4.0"
sqlalchemy-utils = "*"
independency = "^1.0"
typer = "*"
yarl = "1.1.1"
beautifulsoup4 = "^4.10.0"
turicreate = {url = "https://github.com/apple/turicreate/releases/download/6.4.1/turicreate-6.4.1-cp38-cp38-manylinux1_x86_64.whl"}

[tool.poetry.dev-dependencies]
black = ">19.3b0"
flake8-awesome = "<1.3"
transliterate = "^1.10"
mypy = "^0.812"
sqlalchemy-stubs = "*"
pytest = "^6.2.4"
pytest-cov = "^2.10.1"

[tool.black]
target-version = ['py38']
line-length = 120

[build-system]
requires = ["poetry>=1.0"]
